{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 18,
  "lineage": "94c1b3de-9e44-a803-15cd-60acbaf743d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0956ccf3fc2b32c55",
            "domain": "vpc",
            "id": "eipalloc-0956ccf3fc2b32c55",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-197-48-29.compute-1.amazonaws.com",
            "public_ip": "54.197.48.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "WordPress-EIP-0"
            },
            "tags_all": {
              "Name": "WordPress-EIP-0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb0a62b2ab81d01b",
            "domain": "vpc",
            "id": "eipalloc-0eb0a62b2ab81d01b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-202-151-129.compute-1.amazonaws.com",
            "public_ip": "52.202.151.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "WordPress-EIP-1"
            },
            "tags_all": {
              "Name": "WordPress-EIP-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342358221784:internet-gateway/igw-0c0d9a2f616e63004",
            "id": "igw-0c0d9a2f616e63004",
            "owner_id": "342358221784",
            "tags": {
              "Name": "WordPress-igw"
            },
            "tags_all": {
              "Name": "WordPress-igw"
            },
            "vpc_id": "vpc-0b9266cb737280225"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0956ccf3fc2b32c55",
            "connectivity_type": "public",
            "id": "nat-0212cc48cf913861c",
            "network_interface_id": "eni-02671477acd4479fd",
            "private_ip": "10.0.0.202",
            "public_ip": "54.197.48.29",
            "subnet_id": "subnet-0e9d71ffc709a1715",
            "tags": {
              "Name": "WordPress-Nat-0"
            },
            "tags_all": {
              "Name": "WordPress-Nat-0"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb0a62b2ab81d01b",
            "connectivity_type": "public",
            "id": "nat-06f37556b39665a35",
            "network_interface_id": "eni-03dceddd35b9e9e62",
            "private_ip": "10.0.1.249",
            "public_ip": "52.202.151.129",
            "subnet_id": "subnet-0a48f5b58ce54428f",
            "tags": {
              "Name": "WordPress-Nat-1"
            },
            "tags_all": {
              "Name": "WordPress-Nat-1"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342358221784:route-table/rtb-08f6aaecb8eff8933",
            "id": "rtb-08f6aaecb8eff8933",
            "owner_id": "342358221784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0212cc48cf913861c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WordPress-Private-rtb 0"
            },
            "tags_all": {
              "Name": "WordPress-Private-rtb 0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9266cb737280225"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.nat_gtw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342358221784:route-table/rtb-046d4391114819e1b",
            "id": "rtb-046d4391114819e1b",
            "owner_id": "342358221784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06f37556b39665a35",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WordPress-Private-rtb 1"
            },
            "tags_all": {
              "Name": "WordPress-Private-rtb 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9266cb737280225"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.nat_gtw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342358221784:route-table/rtb-0ac916f57fbfc7d11",
            "id": "rtb-0ac916f57fbfc7d11",
            "owner_id": "342358221784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0d9a2f616e63004",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WordPress-Public-rtb"
            },
            "tags_all": {
              "Name": "WordPress-Public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9266cb737280225"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0990246a12eb724e9",
            "route_table_id": "rtb-08f6aaecb8eff8933",
            "subnet_id": "subnet-05ca0e03566571382"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.nat_gtw",
            "aws_route_table.private_rtb",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015df179999e9d1e0",
            "route_table_id": "rtb-046d4391114819e1b",
            "subnet_id": "subnet-061013d395b993cd2"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.nat_gtw",
            "aws_route_table.private_rtb",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057688018ee3a4741",
            "route_table_id": "rtb-0ac916f57fbfc7d11",
            "subnet_id": "subnet-0e9d71ffc709a1715"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rtb",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bb75e1a399dbd31",
            "route_table_id": "rtb-0ac916f57fbfc7d11",
            "subnet_id": "subnet-0a48f5b58ce54428f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rtb",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342358221784:subnet/subnet-05ca0e03566571382",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ca0e03566571382",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342358221784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WordPress-Private-0"
            },
            "tags_all": {
              "Name": "WordPress-Private-0"
            },
            "vpc_id": "vpc-0b9266cb737280225"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342358221784:subnet/subnet-061013d395b993cd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061013d395b993cd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342358221784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WordPress-Private-1"
            },
            "tags_all": {
              "Name": "WordPress-Private-1"
            },
            "vpc_id": "vpc-0b9266cb737280225"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342358221784:subnet/subnet-0e9d71ffc709a1715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9d71ffc709a1715",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342358221784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WordPress-Public-0"
            },
            "tags_all": {
              "Name": "WordPress-Public-0"
            },
            "vpc_id": "vpc-0b9266cb737280225"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342358221784:subnet/subnet-0a48f5b58ce54428f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a48f5b58ce54428f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342358221784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WordPress-Public-1"
            },
            "tags_all": {
              "Name": "WordPress-Public-1"
            },
            "vpc_id": "vpc-0b9266cb737280225"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342358221784:vpc/vpc-0b9266cb737280225",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0258f54fefbdf8840",
            "default_route_table_id": "rtb-0f0287d7485f5b454",
            "default_security_group_id": "sg-06928a7e3083de203",
            "dhcp_options_id": "dopt-03a8da7f571762f79",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b9266cb737280225",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f0287d7485f5b454",
            "owner_id": "342358221784",
            "tags": {
              "Name": "WordPress-vpc"
            },
            "tags_all": {
              "Name": "WordPress-vpc"
            }
          }
        }
      ]
    }
  ]
}